일기 작성 폼 SSR 최적화 및 수정 로직 DB 오류 해결
- DiaryController 개선: 태그 목록 및 일기 중복 여부 사전 로딩(SSR)으로 화면 깜빡임 제거
- application.yaml: PUT 요청 처리를 위한 HiddenHttpMethodFilter 설정 활성화
- DiaryTagRepository: 수정 시 Unique 제약 조건 충돌 방지를 위한 직접 삭제 쿼리(deleteAllByDiaryId) 구현
- DiaryService: 태그 업데이트 로직에 삭제 후 저장 방식 적용
- form.html: 타임리프 렌더링 적용 및 POST/PUT 동적 전환 스크립트 고도화
- TagResponse DTO 추가